1.更新UI 2.更新软件注册功能 3.新增功能：差分账号管理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:theme="@style/Theme.APPAuto"
         tools:targetApi="31">
         <activity
+            android:name=".account_of_cors"
+            android:exported="false" />
+        <activity
             android:name=".RegisterSystem"
             android:exported="false" />
         <activity
